# uboot_linux_rootfs_cmake

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  make_app.sh
app/00math/: Makefile  hello  hello.c  math.c  math.h
app/01header_test/: a.out  main.c
app/02hello_char_app/: Makefile  hello_char_app  hello_char_app.c
app/03empty_header/: Makefile  a.out  hello_pi.c  hello_pi.d  pi.h
app/04syscall_demo/: .gitignore  Makefile  syscall_arm  syscall_arm.s  syscall_demo.c
app/04syscall_demo/syscall/: a.out  hello_syscall.c
app/04syscall_demo/x86/: syscall_x86_32  syscall_x86_32.s  syscall_x86_64  syscall_x86_64.s
app/05add_a_hello_syscall/hello_c/: Makefile  hello.c  hello_c
app/05add_a_hello_syscall/hello_s/: Makefile  hello.s  hello_s
app/06vsyscall_time/: a.out  vsyscall_time.c
app/07vdso/: a.out  vdso_time.c
fs/minix_test/: minix.data  minix_origin.data
kernel/: CMakeLists.txt  make_drivers.sh  make_kernel.sh  make_rtc.sh
kernel/drivers/00hello/: Makefile  hello.c
kernel/drivers/01hello_Kbuild/: Kbuild
kernel/drivers/02hello_params/: Kbuild  Makefile
kernel/drivers/03export_symbol/: .gitignore
kernel/drivers/04hello_version_ctrl/: Makefile  (+2 more)
kernel/rtc/: .gitignore
rootfs/: .gitignore  CMakeLists.txt  fstab.vexpress  inittab.vexpress  make_rootfs.sh  profile.vexpress  rcS.vexpress
rootfs/busybox-1.35.0/: .busybox_unstripped.cmd  .config  .config.old  Config.in  Makefile  busybox  busybox_unstripped.map  busybox_unstripped.out
uboot/: CMakeLists.txt  make_uboot.sh
uboot/u-boot-2022.07-rc3/: .config  .gitignore
(+712 files in other folders)
